# Ricardo-PickleRick

./: #auto_saved_files#  .gitmodules  IMU.kicad_sch  Nukes.kicad_sch  PickleRick.kicad_pcb  PickleRick.kicad_prl  PickleRick.kicad_pro  PickleRick.kicad_sch  _autosave-PickleRick.kicad_pcb  _autosave-PickleRick.kicad_sch  _autosave-power.kicad_sch  can.kicad_sch  fp-info-cache  gps.kicad_sch  power.kicad_sch  radio.kicad_sch  usb-uart.kicad_sch
Firmware/: .gitignore  CMakeLists.txt  callgrind.sprof  platformio.ini  sdkconfig.esp32dev  sdkconfig.esp32s3  sdkconfig.esp32s3.old  sdkconfig.esp32s3_debug  sdkconfig.v1  sdkconfig.v2  sdkconfig.v2.old  sdkconfig.v3  sdkconfig.v3.old  sprof.out  sprofiler.py
Firmware/controller_python/: PID.py
Firmware/example_rml/: rml.jsonc
Firmware/src/: CMakeLists.txt  main.cpp  system.cpp  system.h
Firmware/test/tdma_sim_test/: CMakeLists.txt  main.cpp
Hardware/: #auto_saved_files#  .gitignore  IMU.kicad_prl  IMU.kicad_pro  IMU.kicad_sch  Nukes.kicad_sch  PickleRick.kicad_pcb  PickleRick.kicad_prl  PickleRick.kicad_pro  PickleRick.kicad_sch  _autosave-PickleRick.kicad_pcb  abus.kicad_sch  can.kicad_sch  fp-info-cache  gps.kicad_sch  power.kicad_sch  radio.kicad_sch  usb-uart.kicad_sch  ~IMU.kicad_sch.lck  ~PickleRick.kicad_pcb.lck  ~PickleRick.kicad_sch.lck
Hardware/bom/: ibom.html
Hardware/low_profile_minifit/: fp-info-cache  low_profile_minifit.kicad_pcb  low_profile_minifit.kicad_prl  low_profile_minifit.kicad_pro
Hardware/production/: $tempfile.tmp  bom.csv  designators.csv  netlist.ipc  positions.csv
(+166 files in other folders)
